[package]
name = "runst"
version = "0.1.0"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]

[dependencies]
lazy_static = "*"
rust-crypto = "0.2.36"
slog = { version = "*", features = ["max_level_trace", "release_max_level_trace"] }
slog-scope = "*"
slog-term = "*"
toml = "0.2.1"
# TODO: pin all deps to specific versions

[profile.release]
lto = true
